--- a/style.css
+++ b/style.css
@@ -1,13 +1,77 @@
-body{
-    background-color: #7ccbff;
+@media screen and (min-width: 901px) {
+    body {
+        background-color: cyan;
+    }
 }
-#div-titre{
-    text-align:center;
+
+@media screen and (max-width: 900px) {
+    body {
+        background-color: yellow;
+        font-size: 11px;
+    }
+    img{
+        width: 50%;
+        height: 50%;
+    }
 }
-#div-form{
+
+@media screen and (max-width: 500px) {
+    body {
+        background-color: red;
+        font-size: 9px;
+    }
+    img{
+        visibility: hidden;
+    }
+    li{
+        float: none;
+        width: 100%;
+    }
+}
+
+
+
+body {
+    cursor: wait
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+
+}
+
+li {
+    float: left;
+}
+
+a:link, a:visited {
+    display: block;
+    width: 120px;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: #98bf21;
+    text-align: center;
+    padding: 4px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+a:hover, a:active {
+    background-color: #7A991A;
+}
+
+.div-titre {
+    text-align: center;
+}
+
+.div-form {
     padding: 0 0 0 145px;
     background-color: chartreuse;
 }
-.tab{
+
+.tab {
     margin-left: 3em;
 }
